added readln macro for internal use by the cli

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["Superdoku"]
+  "cSpell.words": ["readln", "Superdoku"],
+  "rust-analyzer.showUnlinkedFileNotification": false
 }
