--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,8 @@
 
 [dev-dependencies]
     pretty_assertions = { version = "1.*" }
+
+[profile.release]
+    codegen-units = 1
+    lto           = true
+    strip         = true
