clean up vscode settings to only include word dict

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-  "cSpell.words": ["readln", "Superdoku"],
-  "rust-analyzer.showUnlinkedFileNotification": false
+  "cSpell.words": ["readln", "Superdoku"]
 }
