--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,9 @@
     publish = false
 
 [dependencies]
-    clap = { version = "4.*", features = ["derive"] }
-    rand = { version = "0.8.*" }
+    clap      = { version = "4.*", features = ["derive"] }
+    crossterm = { version = "0.27.*" }
+    rand      = { version = "0.8.*" }
 
 [dev-dependencies]
     pretty_assertions = { version = "1.*" }
