--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@
     rand      = { version = "0.8.*" }
 
 [dev-dependencies]
+    ansi-str          = { version = "0.8.*" }
     pretty_assertions = { version = "1.*" }
 
 [profile.release]
