Add distinction between editable and non-editable squares (#19)
* renamed Square enum variants to remove ambiguity

Square::Number        => Square::PlayerMove
Square::Superposition => Square::Incomplete

This is so that the names are less confusing for when I add
distinguishing between Square's that can be edited (representing player
moves) and Square's that the game starts with.

* change references to Square to references to Self

* add Starting variant to Square & update func names

The Starting variant represents a given number in an unsolved sudoku
board. Editing one of these will be separate from editing a PlayerMove.

* add methods for editing Square::Starting values

* add color to differentiate between square types

* fix tests

* made windows-specific io::clear() use correct cmd

* add Board::is_solvable()

* Revert "add Board::is_solvable()"

This reverts commit bf07518199257d12f8c54c9c2037c4aa6b473dd7.

The commit was outside of the scope of the feature branch

* add IntoIterator to Board & max finder

* add setting Starting squares to public library

* internal function rename

* rewrite cli menus logic

* more rewriting + addition of setup menu

* add setup loop to cli

* change coloring backend

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,12 @@
     publish = false
 
 [dependencies]
-    clap = { version = "4.*", features = ["derive"] }
-    rand = { version = "0.8.*" }
+    clap       = { version = "4.*", features = ["derive"] }
+    owo-colors = { version = "3.*", features = ["supports-colors"] }
+    rand       = { version = "0.8.*" }
 
 [dev-dependencies]
+    ansi-str          = { version = "0.8.*" }
     pretty_assertions = { version = "1.*" }
 
 [profile.release]
